fix alignfull classname

--- a/src/row/style.scss
+++ b/src/row/style.scss
@@ -5,7 +5,7 @@
  */
 
 .wp-bootstrap-blocks-row {
-	&.full-width > .row {
+	&.alignfull > .row {
 		margin-left: 0;
 		margin-right: 0;
 	}
